feat: change search instead of get by criteria, and cleaned transactional from controller
