# src/main/java/org/tkit/onecx/document/rs/internal/controllers/DocumentController.java
@@ -74,8 +74,7 @@ public class DocumentController implements DocumentControllerApi {
     }
 
     @Override
-    @Transactional
-    public Response getDocumentByCriteria(DocumentSearchCriteriaDTO criteriaDTO) {
+    public Response searchDocumentsByCriteria(DocumentSearchCriteriaDTO criteriaDTO) {
         DocumentSearchCriteria criteria = documentMapper.map(criteriaDTO);
         if (Objects.nonNull(criteriaDTO.getStartDate()) && !criteriaDTO.getStartDate().isEmpty()) { // added this for
                                                                                                     // date search
@@ -111,7 +110,6 @@ public class DocumentController implements DocumentControllerApi {
     }
 
     @Override
-    @Transactional
     public Response getFailedAttachmentData(String documentId) {
         List<StorageUploadAudit> failedAttachmentList = storageUploadAuditDAO
                 .findFailedAttachmentsByDocumentId(documentId);
@@ -121,7 +119,6 @@ public class DocumentController implements DocumentControllerApi {
     }
 
     @Override
-    @Transactional
     public Response updateDocument(String id, DocumentCreateUpdateDTO documentCreateUpdateDTO) {
         var document = documentDAO.findDocumentById(id);
         if (Objects.isNull(document)) {
@@ -150,7 +147,6 @@ public class DocumentController implements DocumentControllerApi {
     }
 
     @Override
-    @Transactional
     public Response bulkUpdateDocument(List<DocumentCreateUpdateDTO> documentCreateUpdateDTO) {
         Iterator<DocumentCreateUpdateDTO> it = documentCreateUpdateDTO.listIterator();
         List<Document> document1 = new ArrayList<>();
@@ -188,7 +184,6 @@ public class DocumentController implements DocumentControllerApi {
     }
 
     @Override
-    @Transactional
     public Response showAllDocumentsByCriteria(DocumentSearchCriteriaDTO criteriaDTO) {
         DocumentSearchCriteria criteria = documentMapper.map(criteriaDTO);
         if (Objects.nonNull(criteriaDTO.getStartDate()) && !criteriaDTO.getStartDate().isEmpty()) {
